--- a/package.json
+++ b/package.json
@@ -5,13 +5,18 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "dotenv": "^6.2.0",
     "gatsby": "^2.1.22",
     "gatsby-image": "^2.0.31",
     "gatsby-plugin-manifest": "^2.0.21",
     "gatsby-plugin-offline": "^2.0.24",
     "gatsby-plugin-react-helmet": "^3.0.7",
     "gatsby-plugin-sharp": "^2.0.24",
+    "gatsby-plugin-snipcart": "^1.0.6",
+    "gatsby-remark-images": "^3.0.6",
+    "gatsby-source-contentful": "^2.0.35",
     "gatsby-source-filesystem": "^2.0.23",
+    "gatsby-transformer-remark": "^2.3.1",
     "gatsby-transformer-sharp": "^2.1.15",
     "prop-types": "^15.7.2",
     "react": "^16.8.3",
